fixed overflow issues

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -48,6 +48,10 @@
   .about-bottom {
     position: relative;
 
+    @include mobile() {
+      overflow-x: hidden;
+    }
+
     .focus {
       z-index: -1;
       position: absolute;
