--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,6 +48,11 @@
 #about .about-bottom {
   position: relative;
 }
+@media only screen and (max-width: 640px) {
+  #about .about-bottom {
+    overflow-x: hidden;
+  }
+}
 #about .about-bottom .focus {
   z-index: -1;
   position: absolute;
@@ -65,6 +70,7 @@
   gap: unset;
   min-height: 100vh;
   position: relative;
+  overflow-x: hidden;
 }
 #cover .focus {
   position: absolute;
